--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,34 @@
 node_modules
+.env
+
+# Dependencies
+yarn.lock
+package-lock.json
+
+# Logs
+logs
+npm-debug.log*
+yarn-debug.log*
+yarn-debug.log
+yarn-error.log*
+
+# Runtime data
+pids
+
+# Cache
+.cache
+
+# Local configuration
+local.json
+
+
+# Environment variables
+.env
+
+# Build
+build
+dist
+
+# Public
+public
+
