--- a/package.json
+++ b/package.json
@@ -7,8 +7,9 @@
     "test": "vitest",
     "test:ui": "vitest --ui",
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
-    "build": "tsc",
-    "start": "node dist/index.js",
+    "build": "tsc -p .",
+    "start": "node dist/src/index.js",
+    "serve": "pnpm build && node dist/src/index.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write .",
@@ -34,14 +35,20 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/node": "^22.14.1",
     "axios": "^1.8.4",
+    "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
     "mongoose": "^8.13.2",
+    "morgan": "^1.10.0",
     "prettier": "^3.5.3",
     "redis": "^4.7.0",
+    "tsconfig-paths": "^4.2.0",
     "typescript": "^5.8.3",
     "winston": "^3.17.0",
     "winston-daily-rotate-file": "^5.0.0",
@@ -49,16 +56,23 @@
     "zod-env": "^0.1.0"
   },
   "devDependencies": {
+    "@biomejs/biome": "^1.9.4",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^5.0.1",
-    "@types/node": "^22.14.1",
+    "@types/compression": "^1.7.5",
+    "@types/morgan": "^1.9.9",
     "@vitest/ui": "^3.1.1",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
     "standard-version": "^9.5.0",
     "ts-node-dev": "^2.0.0",
     "vitest": "^3.1.1"
+  },
+  "biome": {
+    "extends": "@biomejs/biome/recommended",
+    "rules": {
+      "typescript/no-unused-vars": "error",
+      "typescript/explicit-function-return-type": "warn"
+    }
   }
 }
