--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,137 +1,35 @@
-name: API Gateway CI/CD
+name: Deploy
 
 on:
   push:
     branches: [main]
-  pull_request:
-    branches: [main]
-  workflow_dispatch: # Allows manual triggering
-
-# Required permissions for pushing to GHCR
-permissions:
-  contents: read
-  packages: write
+  workflow_dispatch: # Manual trigger
 
 jobs:
-  build_and_push:
+  # Run the build_and_push job first
+  build:
     name: Build and Push Docker Image
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    uses: ./.github/workflows/build.yml
+    secrets: inherit
 
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "pnpm"
-
-      - name: Install dependencies
-        run: |
-          if [ -f pnpm-lock.yaml ]; then
-            pnpm install --frozen-lockfile
-          else
-            pnpm install --no-frozen-lockfile
-          fi
-
-      - name: Build application
-        run: pnpm build # Verify TS compiles successfully
-
-      - name: Log in to GitHub Container Registry
-        uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ secrets.GHCR_USERNAME }}
-          password: ${{ secrets.GHCR_TOKEN }}
-
-      - name: Extract metadata (tags, labels) for Docker
-        id: meta
-        uses: docker/metadata-action@v5
-        with:
-          images: ghcr.io/${{ secrets.GHCR_USERNAME }}/api-gateway # Replace with your repo name if needed
-
-      - name: Build and push Docker image
-        uses: docker/build-push-action@v5
-        with:
-          context: .
-          push: true
-          tags: ${{ steps.meta.outputs.tags }}
-          labels: ${{ steps.meta.outputs.labels }}
-
-      # Upload docker-compose.yml for deployment job
-      - name: Archive docker-compose.yml
-        uses: actions/upload-artifact@v4
-        with:
-          name: docker-compose-file
-          path: docker-compose.yml
-
-  # --- Optional Test Job ---
+  # Run the test job
   test:
     name: Run Tests
-    runs-on: ubuntu-latest
-    needs: build_and_push # Can run in parallel, but might depend on build steps if integration testing
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    uses: ./.github/workflows/test.yml
+    secrets: inherit
 
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "pnpm"
-
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
-
-      - name: Run tests
-        run: pnpm test
-
-  # --- Lint and Format Check Job ---
+  # Run the lint job
   lint:
-    name: Lint and Format Check
-    runs-on: ubuntu-latest
-    needs: build_and_push # Can run in parallel
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
+    name: Lint and Format
+    uses: ./.github/workflows/lint.yml
+    secrets: inherit
 
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: "20"
-          cache: "pnpm"
-
-      - name: Install dependencies
-        run: pnpm install --no-frozen-lockfile
-
-      - name: Run linter
-        run: pnpm lint
-
-      - name: Check formatting
-        run: pnpm format:check
-
-  # --- Deployment Job ---
+  # Deploy to Hostinger after all other jobs succeed
   deploy:
     name: Deploy to Hostinger
+    needs: [build, test, lint]
     runs-on: ubuntu-latest
-    # Run only if build/push, test, and lint succeed, and it's a push to main or manually triggered
-    needs: [build_and_push, test, lint]
-    if: (github.ref == 'refs/heads/main' && github.event_name == 'push') || github.event_name == 'workflow_dispatch'
+    # environment: production # Optional: Define environment for protection rules/secrets
 
     steps:
       - name: Download docker-compose.yml
@@ -149,16 +47,16 @@ jobs:
       - name: Add host key to known_hosts
         run: ssh-keyscan -H ${{ secrets.HOSTINGER_SSH_HOST }} >> ~/.ssh/known_hosts
 
-      # **** ADD THIS TEMPORARY STEP ****
+      # Test SSH connection before deploying
       - name: Test SSH Connection and Path
         run: |
           echo "Attempting SSH connection to ${{ secrets.HOSTINGER_SSH_USER }}@${{ secrets.HOSTINGER_SSH_HOST }}"
           echo "Checking existence and permissions of path: ${{ secrets.HOSTINGER_APP_PATH }}"
           ssh -o StrictHostKeyChecking=no ${{ secrets.HOSTINGER_SSH_USER }}@${{ secrets.HOSTINGER_SSH_HOST }} 'echo "Connection successful! Listing target directory:" && ls -la ${{ secrets.HOSTINGER_APP_PATH }}'
-      # **** END OF TEMPORARY STEP ****
+
       - name: Deploy and Restart Service
         uses: appleboy/ssh-action@v1.0.3
-        id: deploy_script # Give the step an ID to check its outcome
+        id: deploy_script
         with:
           host: ${{ secrets.HOSTINGER_SSH_HOST }}
           username: ${{ secrets.HOSTINGER_SSH_USER }}
@@ -181,7 +79,7 @@ jobs:
             tar czf ${BACKUP_DIR}/${BACKUP_FILE} docker-compose.yml .env || echo "Backup created (ignoring tar exit code if .env doesn't exist)."
             echo "Backup created at ${BACKUP_DIR}/${BACKUP_FILE}"
 
-            # 2. Update docker-compose.yml (copied from artifact below)
+            # 2. Update docker-compose.yml (copied from artifact)
             echo "--- Updating docker-compose.yml ---"
             # The file will be copied by the next step
 
@@ -211,8 +109,7 @@ jobs:
           scp -o StrictHostKeyChecking=no ./docker-compose.yml ${{ secrets.HOSTINGER_SSH_USER }}@${{ secrets.HOSTINGER_SSH_HOST }}:${{ secrets.HOSTINGER_APP_PATH }}/docker-compose.yml
 
       - name: Rollback on Failure
-        # Run if the deploy_script step failed
-        if: steps.deploy_script.outcome == 'failure'
+        if: failure() && steps.deploy_script.outcome == 'failure'
         uses: appleboy/ssh-action@v1.0.3
         with:
           host: ${{ secrets.HOSTINGER_SSH_HOST }}
