Refactor Docker setup and CI/CD workflows to use npm instead of pnpm
- Remove pnpm installation from Dockerfile and CI workflows.
- Update Dockerfile to use npm for dependency installation and build commands.
- Modify GitHub Actions workflows to install dependencies using npm and run relevant scripts.
- Update .gitignore to include package-lock.json for better dependency management.
- Refactor MongoDB logger import path for improved modularity.

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,7 @@ node_modules
 
 # Dependencies
 yarn.lock
+# Uncomment below line if you want to ignore package-lock.json
 # package-lock.json
 
 # Logs
