--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,22 +23,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "pnpm"
+          cache: "npm"
 
       - name: Install dependencies
-        run:  pnpm install
+        run: npm ci
 
       - name: Build application
-        run: pnpm build # Verify TS compiles successfully
+        run: npm run build # Verify TS compiles successfully
 
       - name: Log in to GitHub Container Registry
         uses: docker/login-action@v3
