--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -16,27 +16,17 @@ jobs:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Setup PNPM
-        uses: pnpm/action-setup@v3
-        with:
-          version: 8
-
       - name: Setup Node.js
         uses: actions/setup-node@v4
         with:
           node-version: "20"
-          cache: "pnpm"
+          cache: "npm"
 
       - name: Install dependencies
-        run: |
-          if [ -f pnpm-lock.yaml ]; then
-            pnpm install --frozen-lockfile
-          else
-            pnpm install --no-frozen-lockfile
-          fi
+        run: npm ci
 
       - name: Run tests
-        run: pnpm test
+        run: npm test
 
       # Optional: Upload test results as artifacts
       # - name: Upload test results
