--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
     "build": "tsc -p .",
     "start": "node dist/src/index.js",
-    "serve": "pnpm build && node dist/src/index.js",
+    "serve": "npm run build && node dist/src/index.js",
     "lint": "eslint . --ext .ts",
     "lint:fix": "eslint . --ext .ts --fix",
     "format": "prettier --write .",
