Enhance project configuration and structure
- Update .env file to include new authentication settings.
- Add .prettierignore to manage files excluded from formatting.
- Refactor .versionrc.json for improved commit type definitions.
- Update commitlint configuration for stricter commit message rules.
- Introduce ESLint configuration with TypeScript support and custom rules.
- Add README files for ESLint and Prettier configurations.
- Implement Prettier configuration for consistent code formatting.
- Refactor various source files for improved code quality and consistency.
- Update package.json and package-lock.json to include new dependencies and scripts.
- Enhance CI/CD workflows for better deployment and testing processes.

--- a/.env
+++ b/.env
@@ -4,3 +4,7 @@ PORT=3000
 DB_HOST=localhost
 DB_PORT=5432
 MONGO_USER=db_user
+
+
+BETTER_AUTH_SECRET=x1eLGNR7nZoKR27Y6Hl4w7oEX5oyZ7b4
+BETTER_AUTH_URL=http://localhost:3000 #Base URL of your app
