--- a/package.json
+++ b/package.json
@@ -10,10 +10,11 @@
     "build": "tsc -p .",
     "start": "node dist/src/index.js",
     "serve": "npm run build && node dist/src/index.js",
-    "lint": "eslint . --ext .ts",
-    "lint:fix": "eslint . --ext .ts --fix",
+    "lint": "eslint . --config eslint.config.mjs",
+    "lint:fix": "eslint . --fix --config eslint.config.mjs",
     "format": "prettier --write .",
     "format:check": "prettier --check .",
+    "format:fix": "prettier --write .",
     "prettier": "prettier --write .",
     "docker:build": "docker build -t api-gateway .",
     "docker:run": "docker run -p 3000:3000 api-gateway",
@@ -39,11 +40,13 @@
     "@types/express": "^5.0.1",
     "@types/node": "^22.14.1",
     "axios": "^1.8.4",
+    "better-auth": "^1.2.7",
     "compression": "^1.8.0",
     "cors": "^2.8.5",
     "dotenv-flow": "^4.1.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "mongodb": "^6.15.0",
     "mongoose": "^8.13.2",
     "morgan": "^1.10.0",
     "prettier": "^3.5.3",
@@ -59,13 +62,22 @@
     "@biomejs/biome": "^1.9.4",
     "@commitlint/cli": "^19.8.0",
     "@commitlint/config-conventional": "^19.8.0",
+    "@eslint/js": "^9.25.0",
     "@types/compression": "^1.7.5",
     "@types/morgan": "^1.9.9",
+    "@typescript-eslint/eslint-plugin": "^8.30.1",
+    "@typescript-eslint/parser": "^8.30.1",
     "@vitest/ui": "^3.1.1",
     "commitizen": "^4.3.1",
     "cz-conventional-changelog": "^3.3.0",
+    "eslint": "^9.25.0",
+    "eslint-config-prettier": "^10.1.2",
+    "eslint-plugin-import": "^2.31.0",
+    "eslint-plugin-node": "^11.1.0",
+    "prettier-plugin-organize-imports": "^4.1.0",
     "standard-version": "^9.5.0",
     "ts-node-dev": "^2.0.0",
+    "typescript-eslint": "^8.30.1",
     "vitest": "^3.1.1"
   },
   "biome": {
